language/move-lang/tests/move_check/typing/subtype_annotation_invalid.exp
error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/subtype_annotation_invalid.move:5:14
  │
5 │         (&0: &mut u64);
  │          --  ^^^^^^^^
  │          │   │
  │          │   Invalid type annotation
  │          │   Expected: '&mut u64'
  │          Given: '&{integer}'

error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/subtype_annotation_invalid.move:9:20
  │
9 │         ((&0, &0): (&mut u64, &mut u64));
  │           --       ^^^^^^^^^^^^^^^^^^^^
  │           │        ││
  │           │        │Expected: '&mut u64'
  │           │        Invalid type annotation
  │           Given: '&{integer}'

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_annotation_invalid.move:10:20
   │
10 │         ((&0, &0): (&mut u64, &u64));
   │           --       ^^^^^^^^^^^^^^^^
   │           │        ││
   │           │        │Expected: '&mut u64'
   │           │        Invalid type annotation
   │           Given: '&{integer}'

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_annotation_invalid.move:11:20
   │
11 │         ((&0, &0): (&u64, &mut u64));
   │               --   ^^^^^^^^^^^^^^^^
   │               │    │      │
   │               │    │      Expected: '&mut u64'
   │               │    Invalid type annotation
   │               Given: '&{integer}'

